--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "5.6.2"
   },
   "devDependencies": {
-    "@types/react-beautiful-dnd": "^13.1.8"
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@typescript-eslint/eslint-plugin": "^8.7.0"
   }
 }
