--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "devDependencies": {
     "@types/react-beautiful-dnd": "^13.1.8",
-    "@typescript-eslint/eslint-plugin": "^8.7.0"
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.2.13"
   }
 }
