--- a/package.json
+++ b/package.json
@@ -9,24 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.56.2",
     "@types/node": "22.7.2",
     "@types/react": "18.3.9",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "frontend": "file:",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
@@ -35,6 +41,7 @@
     "typescript": "5.6.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@typescript-eslint/eslint-plugin": "^8.7.0"
   }
